--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>🐼🍃คำศึพท์ภาษาจีนจ้า</title>
+    <title>🐼🍃คำศัพท์ภาษาจีนจ้า</title>
 </head>
 <body>
     <div id="speakBtn">🔊</div>
@@ -16,4 +16,5 @@
     <script src="wordlist.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
